Updated website pages and added about image

--- a/about.html
+++ b/about.html
@@ -9,25 +9,9 @@
   <meta name="keywords" content="about EJPEEF, Edoror Judy Foundation, poverty eradication, women empowerment, youth training, NGO in Nigeria" />
   <meta name="author" content="Edoror Judy Empowerment Foundation" />
 
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://edororjudyfoundation.org/about.html" />
-  <meta property="og:title" content="About Edoror Judy Empowerment Foundation" />
-  <meta property="og:description" content="Discover the mission and impact of EJPEEF as we empower communities and create lasting change in Nigeria." />
-  <meta property="og:image" content="images/logo.png" />
-
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://edororjudyfoundation.org/about.html" />
-  <meta name="twitter:title" content="About Us | Edoror Judy Empowerment Foundation" />
-  <meta name="twitter:description" content="Our story, our mission, and our commitment to empowering lives across Nigeria." />
-  <meta name="twitter:image" content="images/logo.png" />
-
-  <link rel="icon" href="images/logo.png" type="image/png" />
+  <link rel="icon" href="assets/images/jed-logo.png" type="image/png" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css" />
-
-  <link rel="canonical" href="https://edororjudyfoundation.org/about.html" />
-  <meta name="robots" content="index, follow" />
-  <meta name="theme-color" content="#ffcc00" />
 </head>
 
 <body>
@@ -35,13 +19,15 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="index.html"><img src="assets/images/jed-logo.png" alt="Jed Foundation Logo"></a>
+        <a href="index.html">
+          <img src="assets/images/jed logo.png" alt="Jed Foundation Logo">
+        </a>
       </div>
+
       <div id="menu-toggle" class="menu-toggle">
-        <span></span>
-        <span></span>
-        <span></span>
+        <span></span><span></span><span></span>
       </div>
+
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html" class="active">About</a></li>
@@ -56,55 +42,57 @@
   <!-- === HERO SECTION === -->
   <section class="hero about-hero">
     <div class="hero-content">
-      <h1>About Jed Foundation</h1>
-      <p>Empowering communities, inspiring change, and building brighter futures across Nigeria.</p>
+      <h1>About Edoror Judy Foundation</h1>
+      <p>Empowering Communities, Transforming Lives — Our journey toward building a Nigeria where every individual has access to education, opportunity, and hope.</p>
     </div>
   </section>
 
-  <!-- === ABOUT CONTENT SECTION === -->
-  <section class="about-section" style="padding: 80px 10%; text-align: center;">
+  <!-- === ABOUT SECTION === -->
+  <section class="about-section">
     <div class="about-header">
       <h2>Who We Are</h2>
-      <hr style="width: 80px; border: 2px solid #ffcc00; margin: 0 auto 20px auto;">
-      <p style="max-width: 800px; margin: 0 auto; color: #555;">Jed Foundation is committed to uplifting underprivileged communities in Nigeria through education, health initiatives, and empowerment programs. We believe that every individual deserves a chance to achieve their full potential.</p>
+      <hr class="section-line">
+      <p>Edoror Judy Poverty Eradication and Empowerment Foundation (EJPEEF) is a Nigerian non-governmental organization dedicated to eradicating poverty and empowering marginalized groups. We focus on education, vocational training, healthcare, and sustainable development projects for women, youth, the elderly, and people with disabilities.</p>
     </div>
 
-    <div class="about-mission" style="margin-top: 60px; display: flex; flex-wrap: wrap; justify-content: center; gap: 40px;">
-      <div class="mission-card" style="flex: 1 1 300px; background: #f1eef6; padding: 25px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
-        <i class="fas fa-bullseye" style="font-size: 2.5rem; color: #3c1361; margin-bottom: 15px;"></i>
+    <div class="about-mission">
+      <div class="mission-card">
+        <i class="fas fa-bullseye"></i>
         <h3>Our Mission</h3>
-        <p>To provide education, health access, and economic opportunities to underserved communities, fostering sustainable growth and empowerment.</p>
+        <p>To provide access to quality education, healthcare, and economic opportunities that promote dignity and self-reliance for every Nigerian.</p>
       </div>
-      <div class="mission-card" style="flex: 1 1 300px; background: #f1eef6; padding: 25px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
-        <i class="fas fa-eye" style="font-size: 2.5rem; color: #3c1361; margin-bottom: 15px;"></i>
+
+      <div class="mission-card">
+        <i class="fas fa-eye"></i>
         <h3>Our Vision</h3>
-        <p>To create a Nigeria where every individual has access to education, health, and empowerment resources to thrive and contribute positively to society.</p>
+        <p>To build a nation free from poverty and inequality — where empowered citizens lead their communities toward lasting progress.</p>
       </div>
-      <div class="mission-card" style="flex: 1 1 300px; background: #f1eef6; padding: 25px; border-radius: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
-        <i class="fas fa-heart" style="font-size: 2.5rem; color: #3c1361; margin-bottom: 15px;"></i>
+
+      <div class="mission-card">
+        <i class="fas fa-heart"></i>
         <h3>Our Values</h3>
-        <p>Integrity, Compassion, Empowerment, Community Development, and Innovation guide all our initiatives and interactions.</p>
+        <p>Integrity, Compassion, Empowerment, Innovation, and Community Service form the foundation of all our efforts.</p>
       </div>
     </div>
   </section>
 
-  <!-- === TEAM SECTION (optional) === -->
-  <section class="team-section" style="padding: 80px 10%; text-align: center; background: #f9f9fb;">
+  <!-- === TEAM SECTION === -->
+  <section class="team-section">
     <h2>Meet Our Team</h2>
-    <hr style="width: 80px; border: 2px solid #ffcc00; margin: 0 auto 20px auto;">
-    <div class="team-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 30px; margin-top: 40px;">
-      <div class="team-card" style="background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
-        <img src="assets/images/team-member1.jpg" alt="Team Member" style="width: 100%; border-radius: 12px; margin-bottom: 15px;">
+    <hr class="section-line">
+    <div class="team-grid">
+      <div class="team-card">
+        <img src="assets/images/team-member1.jpg" alt="Team Member">
         <h4>Judy Edoror</h4>
         <p>Founder & CEO</p>
       </div>
-      <div class="team-card" style="background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
-        <img src="assets/images/team-member2.jpg" alt="Team Member" style="width: 100%; border-radius: 12px; margin-bottom: 15px;">
+      <div class="team-card">
+        <img src="assets/images/team-member2.jpg" alt="Team Member">
         <h4>Michael Ade</h4>
         <p>Program Director</p>
       </div>
-      <div class="team-card" style="background: #fff; padding: 20px; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
-        <img src="assets/images/team-member3.jpg" alt="Team Member" style="width: 100%; border-radius: 12px; margin-bottom: 15px;">
+      <div class="team-card">
+        <img src="assets/images/team-member3.jpg" alt="Team Member">
         <h4>Amaka Obi</h4>
         <p>Community Outreach Lead</p>
       </div>
@@ -132,25 +120,13 @@
       </div>
     </div>
 
-
-
     <div class="footer-legal">
-  <p>
-    <a href="privacy.html">Privacy Policy</a> |
-    <a href="terms.html">Terms of Use</a> |
-    <a href="cookies.html">Cookies Policy</a>
-  </p>
-  <p>Registered NGO No: RC/EDJ/2025/8902095</p>
-  <p> 22 Emaoudo Quarter Ekpoma</p>
-</div>
-
-    <p class="copyright">© 2025 Edoror Judy Povert Eradication and Empowerment Foundation. All rights reserved.</p>
+      <p><a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms of Use</a> | <a href="cookies.html">Cookies Policy</a></p>
+      <p>Registered NGO No: RC/EDJ/2025/8902095 | 22 Emaoudo Quarter, Ekpoma</p>
+      <p class="copyright">© 2025 Edoror Judy Poverty Eradication and Empowerment Foundation. All rights reserved.</p>
+    </div>
   </footer>
 
   <script src="js/main.js"></script>
-  <script>
-    // Auto-update footer year
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
 </body>
 </html>
