--- a/blog.html
+++ b/blog.html
@@ -32,29 +32,32 @@
 
 <body>
   <!-- === HEADER COMPONENT === -->
-  <header>
+  
+    <header>
     <nav class="navbar">
-      <div class="logo">
-        <a href="index.html">
-          <img src="assets/images/jed logo.png" alt="Jed Foundation Logo">
-        </a>
-      </div>
+  <div class="logo">
+    <a href="index.html">
+      <img src="assets/images/jed-logo.png" alt="Jed Foundation Logo">
+    </a>
+  </div>
 
-      <div id="menu-toggle" class="menu-toggle">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
+  <div id="menu-toggle" class="menu-toggle">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
 
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="programs.html">Programs</a></li>
-        <li><a href="blog.html" class="active">Blog</a></li>
-        <li><a href="donate.html">Donate</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+  <ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="programs.html">Programs</a></li>
+    <li><a href="blog.html">Blog</a></li>
+    <li><a href="donate.html">Donate</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
+  
   </header>
 
   <!-- === BLOG SECTION === -->
