--- a/donate.html
+++ b/donate.html
@@ -35,31 +35,35 @@
 <body>
   <!-- === HEADER === -->
   <header>
+     
+     <header>
     <nav class="navbar">
-      <!-- Logo -->
-      <div class="logo">
-        <a href="index.html">
-          <img src="assets/images/jed-logo.png" alt="Edoror Judy Foundation Logo">
-        </a>
-      </div>
+  <div class="logo">
+    <a href="index.html">
+      <img src="assets/images/jed-logo.png" alt="Jed Foundation Logo">
+    </a>
+  </div>
 
-      <!-- Mobile Menu Toggle -->
-      <div id="menu-toggle" class="menu-toggle" aria-label="Toggle menu" role="button" tabindex="0">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
+  <div id="menu-toggle" class="menu-toggle">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
 
-      <!-- Navigation Links -->
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="programs.html">Programs</a></li>
-        <li><a href="donate.html" class="active">Donate</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+  <ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="programs.html">Programs</a></li>
+    <li><a href="blog.html">Blog</a></li>
+    <li><a href="donate.html">Donate</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
+
   </header>
+
+  
+
 
   <!-- === HERO SECTION === -->
   <section class="hero">
